# kalman

./: .gitignore  02_adaptive_filter.ipynb  README.md  demo.py  pyproject.toml  requirements.txt
polymarket-forensics/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
polymarket-forensics/backend/: Dockerfile  config.py  enums.py  exceptions.py  main.py  requirements.txt
polymarket-forensics/backend/api/: routes_alerts.py  routes_clusters.py  routes_export.py  routes_markets.py  routes_search.py  routes_stats.py  routes_wallets.py  schemas.py  websocket.py
polymarket-forensics/backend/chain/: address_classifier.py  alchemy_client.py  exchange_identifier.py  funding_tracer.py
polymarket-forensics/backend/data/: database.py  known_exchanges.py  models.py  polymarket_client.py
polymarket-forensics/backend/repositories/: alerts.py  wallets.py
polymarket-forensics/backend/scoring/: anomaly_detection.py  insider_score.py  smart_score.py  statistical_tests.py  types.py
polymarket-forensics/backend/services/: alert_generator.py  chain_tracer.py  cluster_detector.py  resolution_tracker.py  scheduler.py  scoring_engine.py  trade_ingester.py
polymarket-forensics/backend/utils/: formatting.py  logging.py  time.py
polymarket-forensics/docs/: AUDIT.md
polymarket-forensics/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
polymarket-forensics/frontend/src/: App.jsx  styles.css
polymarket-forensics/frontend/src/components/: AlertCard.jsx  BubbleGraph.jsx  ConnectionIndicator.jsx  ErrorBoundary.jsx  ErrorState.jsx  FundingChainViz.jsx  InsiderScoreBar.jsx  LoadingSkeleton.jsx  MarketDistribution.jsx  SearchBar.jsx  StatCard.jsx  TradeRow.jsx  TradeTimeline.jsx  WalletScoreBreakdown.jsx
polymarket-forensics/frontend/src/hooks/: useAlerts.js  useAsync.js  useDebouncedValue.js  useWallet.js
polymarket-forensics/frontend/src/pages/: ClusterMap.jsx  Leaderboard.jsx  (+4 more)
polymarket-forensics/scripts/: backfill_trades.py  init_db.py  init_db.sql  seed_exchanges.py
polymarket-forensics/tests/: conftest.py  test_cluster_merge.py  test_insider_score.py  test_smart_score.py  test_statistical_tests.py  test_utils.py
(+51 files in other folders)
